=== v2.0 ===
* NHibernate.Envers now targets .net framework 4.0
* IAuditProjection.GetData now returns Tuple<string, string, Boolean>


=== vNext ===
* IAuditStrategy.Initialize(AuditConfiguration) added. AuditConfiguration and GlobalConfiguration removed from interface methods.



=== 1.5 GA (v 1.5.0), 2012-12-05, NH 3.3.2 GA ====

*** Possible breaking change ***
* ICollectionMapperFactory.IdBag and IdBag<T> signature changed. IndexComponentData no longer passed.

** Bug
* [NHE-95] - unionsubclass mapping creates table for abstract base class
* [NHE-98] - Between in OR statement produce wrong result
* [NHE-99] - Maximize in OR statement produce wrong result
* [NHE-93] - Rolled back transaction might create audit data
* [NHE-94] - Support composite-id with key-many-to-one
* [NHE-97] - Exception if non lazy ToOne ref exists

** Improvement
* [NHE-96] - IdBag is not currently supported
* [NHE-100] - Get the latest revision of all instances for a requested Entity Class



=== 1.4 GA (v 1.4.0.0), 2012-10-05, NH 3.3.1 GA ===

** Bug
* [NHE-60] - Support bidirectional onetomany with join table
* [NHE-86] - Bidirectional one-to-many with composite-id throws
* [NHE-88] - Support custom generic types
* [NHE-90] - Incorrect entity revision when clearing the cache

** Improvement
* [NHE-85] - generateMappingData Method throws NullReferenceException
* [NHE-89] - Make Envers configuration serializable.

*** Possible breaking change ***
* AuditConfiguration made sealed



=== 1.3 GA (v 1.3.0.0), 2012-07-10, NH 3.3.1 GA ===

** Bug
* [NHE-83] - Envers should throw if trying to persist outside transaction
* [NHE-84] - Auditing a previously detached and now reatched object causes a null pointer exception

** Improvement
* [NHE-82] - Let user reuse enversproxyfactory instance in DefaultCollectionMapperFactory override

*** Breaking changes ***
* Persisting outside a transaction now throws AuditException