@@ -1,6 +1,5 @@
 ﻿using System;
 using NHibernate.Envers.Configuration;
-using NHibernate.Envers.Tools;
 
 namespace NHibernate.Envers.Query.Order
 {
@@ -10,6 +9,6 @@ namespace NHibernate.Envers.Query.Order
 		/// </summary>
 		/// <param name="auditCfg">Configuration.</param>
 		/// <returns>A pair: (property name, ascending?).</returns>
-		Pair<String, Boolean> GetData(AuditConfiguration auditCfg);
+		Tuple<string, bool> GetData(AuditConfiguration auditCfg);
 	}
 }
